--- a/css/style.css
+++ b/css/style.css
@@ -3,36 +3,50 @@ body {
   padding: 0;
   font-family: var(--font-primary);
   background-color: var(--primary-background-color);
+  display: flex;
+  flex-direction: column;
 }
 
 header {
   background-color: var(--secondary-background-color);
   display: flex;
+  padding: 0.5rem;
 }
 
 header>h1 {
+  color: white;
+  font-family: var(--font-primary);
+  font-size: 2rem;
+  font-weight: 900;
   margin: 0;
+  padding-left: 1rem;
 }
 
-button {
+.menu-button {
   border: none;
   background-color: transparent;
   cursor: pointer;
   padding: 10px;
 }
 
-button img {
+.menu-button img {
   width: 30px;
   height: 30px;
 }
 
+.menu-button:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 8px;
+}
+
+.main-content {
+  flex-grow: 1;
+  display: flex;
+}
+
 .sidebar {
-  height: 100%;
   width: 0;
-  position: fixed;
   z-index: 1;
-  top: 50px;
-  left: 0;
   background-color: var(--secondary-background-color);
   overflow-x: hidden;
   transition: 0.3s;
@@ -48,4 +62,102 @@ button img {
 
 .sidebar.open~#page {
   margin-left: 300px;
+}
+
+.sidebar-button {
+  width: 10rem;
+	padding: 10px 40px;
+	border-radius: 10px;
+	outline: none;
+	border: none;
+	font-weight: 500;
+	background-color: var(--accent-color);
+	color: white;
+	font-size: 20px;
+	cursor: pointer;
+	transition: all 0.1s ease-in-out;
+	user-select: none;
+}
+
+.sidebar-button:hover, .sidebar-icon:hover {
+	transform: scale(1.05);
+	filter: brightness(1.08);
+}
+
+.sidebar-lists {
+	flex-grow: 1;
+  width: 100%;
+	margin: 0;
+	padding: 0;
+	margin-top: 20px;
+	display: flex;
+	flex-direction: column;
+}
+
+.sidebar-list-item {
+	width: 100%;
+	padding: 10px 2rem;
+	color: white;
+	font-weight: 500;
+	font-size: 22px;
+	cursor: pointer;
+	transition: all 0.1s ease-in-out;
+	list-style: none;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	user-select: none;
+}
+
+.sidebar-list-item:hover {
+	filter: brightness(1.2);
+}
+
+.active-sidebar-item {
+	color: white !important;
+	background: rgb(210, 0, 2);
+	background: linear-gradient(
+		90deg,
+		var(--accent-color) -50%,
+		var(--primary-background-color) 100%
+	);
+}
+
+.to-do-list {
+  flex-grow: 1;
+  padding: 5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.date {
+  width: 70%;
+  text-align: left;
+  color: white;
+  font-family: var(--font-primary);
+  font-size: 1.5rem;
+  font-weight: 900;
+  margin: 0;
+  padding-left: 1rem;
+}
+
+
+.to-do-left hr {
+  border: none;
+  height: 2px; 
+  background-color: white; 
+  margin: 20px 0;
+}
+
+.list {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.list li {
+  color: white;
+  font-size: 1rem;
 }
