--- a/css/style.css
+++ b/css/style.css
@@ -171,6 +171,20 @@ header>h1 {
   align-items: center;
 }
 
+.delete-task-btn {
+  margin-left: 10px;
+  padding: 0.2rem 0.5rem;
+  background-color: red;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.delete-task-btn:hover {
+  background-color: darkred;
+}
+
 #new-task-form {
   display: flex;
   flex-grow: 1;
