--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,28 @@ header>h1 {
   background-color: darkred;
 }
 
+.sorting-controls {
+  padding: 1rem;
+  display: flex;
+  justify-content: space-around;
+  background-color: #f0f0f0;
+}
+
+.sort-button {
+  padding: 0.5rem 1rem;
+  font-size: 16px;
+  text-align: center;
+  border: 1px solid #ccc;
+  background-color: #fff;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.sort-button:hover {
+  background-color: #e0e0e0;
+}
+
+
 #new-task-form {
   display: flex;
   flex-grow: 1;
