--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ header>h1 {
 }
 
 .main-content {
+  padding: 20px;
   flex-grow: 1;
   display: flex;
 }
@@ -165,10 +166,13 @@ header>h1 {
 }
 
 .to-do-list .task-entry {
-  padding: 1rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 20px;
+  background-color: #f0f0f0;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .delete-task-btn {
@@ -227,7 +231,7 @@ header>h1 {
   background-color: darkred;
 }
 
-.edit-list-button{
+.edit-list-button {
   background-color: green;
   color: white;
   border: none;
@@ -243,25 +247,45 @@ header>h1 {
 
 #new-task-form {
   display: flex;
-  flex-grow: 1;
-  justify-content: flex-end;
+  align-items: center;
+  gap: 10px;
 }
 
 #new-task-form input {
-  padding: 0.5rem;
-  margin-right: 0.5rem;
-  flex-grow: 1;
+  width: 100%;
+  padding: 10px 15px;
+  border: 2px solid #ccc;
+  border-radius: 20px;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+  outline: none;
+  transition: border-color 0.3s ease-in-out;
 }
 
 #new-task-form button {
-  padding: 0.5rem 1rem;
-  background-color: var(--accent-color);
+  padding: 10px 20px;
+  background-image: linear-gradient(to right, #06b, #06d);
   color: white;
   border: none;
+  border-radius: 20px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
   cursor: pointer;
-  transition: background 0.3s;
+  transition: background-color 0.3s ease;
 }
 
 #new-task-form button:hover {
-  background-color: darken(var(--accent-color), 10%);
+  background-image: linear-gradient(to right, #058, #05a);
+}
+
+#new-task-form input:focus {
+  border-color: #0056b3;
+  /* Highlight focus with a color change */
+}
+
+#new-task-form input::placeholder {
+  color: #aaa;
+  transition: color 0.3s ease-out;
+}
+
+#new-task-form input:focus::placeholder {
+  color: #ccc;
 }
