Fixed CSS on add list popup. Fixed Edit and Delete buttons not adding when adding a new list.

--- a/css/style.css
+++ b/css/style.css
@@ -264,14 +264,14 @@ header>h1 {
   background-color: darkgreen;
 }
 
-#new-task-form {
+#new-task-form, #new-list-form {
   display: flex;
   align-items: center;
   gap: 10px;
   padding: 1rem;
 }
 
-#new-task-form input {
+#new-task-form input, #new-list-form input{
   width: 100%;
   padding: 10px 15px;
   border: 2px solid #ccc;
@@ -281,7 +281,7 @@ header>h1 {
   transition: border-color 0.3s ease-in-out;
 }
 
-#new-task-form button {
+#new-task-form button, #new-list-form button{
   padding: 10px 20px;
   background-image: linear-gradient(to right, #06b, #06d);
   color: white;
@@ -292,21 +292,21 @@ header>h1 {
   transition: background-color 0.3s ease;
 }
 
-#new-task-form button:hover {
+#new-task-form button:hover, #new-list-form button:hover{
   background-image: linear-gradient(to right, #058, #05a);
 }
 
-#new-task-form input:focus {
+#new-task-form input:focus, #new-list-form input:focus{
   border-color: #0056b3;
   /* Highlight focus with a color change */
 }
 
-#new-task-form input::placeholder {
+#new-task-form input::placeholder, #new-list-form input::placeholder{
   color: #aaa;
   transition: color 0.3s ease-out;
 }
 
-#new-task-form input:focus::placeholder {
+#new-task-form input:focus::placeholder, #new-list-form input:focus::placeholder{
   color: #ccc;
 }
 
